# c_lexer

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  utils.rs
tests/: lexer-fn-def.c
